# prepomodoro

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: check.yml
examples/: work.yaml
src/: config.rs  entity.rs  main.rs  msg.rs
src/config/: convert.rs  mod.rs
src/ui/: checklist.rs  dialog.rs  layout.rs  mod.rs
src/ui/components/: checklist.rs  mod.rs
