[package]
name = "prepomodoro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
serde = { version = "1.0.159", features = ["derive"] }
serde_yaml = "0.9.21"
tui = { package = "ratatui", version = "0.20.1" }
